<package>
  <name>ontoreef_msgs</name>
  <version>1.11.1</version>
  <description>Service messages definitions for parsing in Ontoreef.</description>
  
  <maintainer email="alessio.capitanelli@gmail.com">Alessio Capitanelli</maintainer>
  <author email="alessio.capitanelli@gmail.com">Alessio Capitanelli</author>
  <url type="website">https://github.com/EmaroLab</url> 
  
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>pitt_msgs</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
</package>